<resources>
    <string name="app_name">ScabControl</string>
    <string name="title_activity_maps">Map</string>
    <string name="fromtxt">From :</string>
    <string name="Destinationtxt">Dest :</string>
    <string name="distancetxt">Dist. (KM) :</string>
    <string name="pricetxt">Price :</string>
    <string name="whereto">Where Are You Going?</string>
    <string name="pricePerkm">2.0</string>
    <string name="txtTimeTitle">Est. Time :</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_driver_map">Map</string>
    <string name="menu_taxicab">Taxi Cab</string>
    <string name="menu_bus">Bus</string>
    <string name="menu_bike">Motor Bike</string>
    <string name="menu_pickup">Pick Up</string>
    <string name="menu_logout">Log Out</string>
    <string name="title_activity_main_maps">MainActivityMaps</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="radio_taxi">Taxi Cab</string>
    <string name="radio_van">Van</string>
    <string name="radio_pickup">Pick Up</string>
    <string name="radio_bike">Moto Bike</string>
    <string name="menu_logOut">Log Out</string>
    <string name="menu_about">About</string>
    <string name="menu_PFF">Refresh</string>
    <string name="textHeader">About Smartcab Gh</string>
    <string name="bodyText">SmartCab Gh is a fully licensed private taxi and private hire service based in ACCRA EAST AIRPORT open 24 hours, 7 days per week. SMartCab is the first product of YESSO TRANSPORT. Our office is based in SPINTEX EAST AIRPORT. Latest GPS tracking devices are in our vehicles for a faster response. If it’s an experienced, reliable and friendly scab and private hire service you are looking for, then SMARTCAB is who you should call.</string>
    <string name="btnView">Check Cost Here</string>
    <string name="choose_datetxt">Date ?</string>
    <string name="book_a_cab_now">Book Now</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="attach_image">Attach Image</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="clear">New</string>
    <string name="delete">Delete</string>
    <string name="smart_dashboard">Smart Dashboard</string>
    <string name="add">Add</string>
    <string name="trip_details">Trip Details</string>
    <string name="title_activity_admin_maps">Map</string>
    <string name="enter_places_that_needs_attention">Enter places that needs attention</string>
    <string name="verify">verify</string>
    <string name="confirm">Confirm</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="client">Client :</string>
    <string name="contact">Contact :</string>
    <string name="to">To :</string>
    <string name="pick_up_date">Pick Up Date :</string>
    <string name="pick_up_time">Pick Up Time :</string>
    <string name="distance">Distance :</string>
    <string name="amount_ghc">Amount (GHC) :</string>
    <string name="driver_name">Driver Name :</string>
    <string name="amount">Amount :</string>
    <string name="driver_contact">Driver Contact :</string>
    <string name="vehicle_num">Vehicle Num :</string>
    <string name="exterior_color">Exterior Color :</string>
    <string name="confirmed_request">Confirmed Request</string>
    <string name="cancelled_trip_details">Cancelled Trip Details</string>
    <string name="reason">Reason</string>
    <string name="completed_trip_details">Completed Trip Details</string>
    <string name="done_trips">Done Meter Trips</string>
    <string name="drivers">Drivers</string>
    <string name="settings">Settings</string>
    <string name="trip">Trips</string>
    <string name="drivers_online">Drivers Online</string>
    <string name="manage_vehicles">Manage Vehicles</string>
    <string name="code_generator">Code Generator</string>
    <string name="manage_services">Manage Services</string>
    <string name="service_type">Service Type</string>
    <string name="total_fare">Total Fare :</string>
    <string name="driver_info">Driver Info</string>
    <string name="email_client">Email :</string>
    <string name="name_driver">Name :</string>
    <string name="license">License :</string>
    <string name="address_name">Address :</string>
    <string name="vehicle_name">Vehicle:</string>
    <string name="location">Location:</string>
    <string name="todo">TODO</string>
    <string name="date">Date :</string>
    <string name="disable">Disable Account</string>
    <string name="deactivated_drivers">Deactivated Drivers</string>

    <!--    Driver registration fields-->
    <string name="drivers_profile">drivers profile</string>
    <string name="name">name</string>
    <string name="displayName">displayName</string>
    <string name="email">email</string>
    <string name="phoneNumber">phoneNumber</string>
    <string name="address">address</string>
    <string name="driverLicense">driverLicense</string>
    <string name="licenseExpireDate">licenseExpireDate</string>
    <string name="vehicle">vehicle</string>
    <string name="status">status</string>
    <string name="registrationDate">registrationDate</string>

    <!--        assign Vehicle fields-->

    <string name="assigned_vehicles">assigned vehicles</string>
    <string name="driverId">driverId</string>
    <string name="vehicleIde">vehicleId</string>
    <string name="cDate">cDate</string>
    <string name="warning_info">Driver is Online, Please Wait!</string>
    <string name="verified">Account Updated!</string>
    <string name="diactivate">Account Deactivated</string>


</resources>

