<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_add"
        android:title="@string/add"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_add_black_24dp"/>

    <item
        android:id="@+id/action_refresh"
        android:title="@string/add"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_refresh_black_24dp"/>

    <item
       android:id="@+id/main_menu"
       android:title="Main Menu"
       app:showAsAction="always"
        android:icon="@drawable/ic_more_vert_black_24dp">

        <menu>
            <item
                android:id="@+id/action_save"
                android:title="@string/save"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_verify"
                android:title="@string/verify"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_disable"
                android:title="@string/disable"
                app:showAsAction="never" />


            <item
                android:id="@+id/action_delete"
                android:title="@string/delete"
                app:showAsAction="never" />

        </menu>


   </item>




</menu>
