<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardElevation="10dp"
    app:cardCornerRadius="12dp"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:padding="8dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/client"
                android:textStyle="bold"
                android:textSize="20dp"
                android:fontFamily="@font/el_messiri_bold"
                app:layout_constraintBottom_toBottomOf="@+id/dTextNum"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/dTextNum" />

            <TextView
                android:id="@+id/dTextNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/lux_montag"
                android:text=""
                android:textAlignment="textStart"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.29"
                app:layout_constraintStart_toStartOf="@+id/dContact"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtPhonetitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/contact"
                android:textStyle="bold"
                android:textSize="20dp"
                android:fontFamily="@font/el_messiri_bold"
                app:layout_constraintBottom_toBottomOf="@+id/dContact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/dContact" />

            <TextView
                android:id="@+id/dContact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/lux_montag"
                android:text=""
                android:textAlignment="textStart"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.26"
                app:layout_constraintStart_toStartOf="@+id/ttxtFrom"
                app:layout_constraintTop_toBottomOf="@+id/dTextNum" />

            <TextView
                android:id="@+id/txtFromTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/fromtxt"
                android:textStyle="bold"
                android:textSize="20dp"
                android:fontFamily="@font/el_messiri_bold"
                app:layout_constraintBottom_toBottomOf="@+id/ttxtFrom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ttxtFrom"
                app:layout_constraintVertical_bias="0.285" />

            <TextView
                android:id="@+id/ttxtFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/lux_montag"
                android:text=""
                android:textAlignment="textStart"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.479"
                app:layout_constraintStart_toStartOf="@+id/ttxtTo"
                app:layout_constraintTop_toBottomOf="@+id/dContact" />

            <TextView
                android:id="@+id/txtToTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/to"
                android:textStyle="bold"
                android:textSize="20dp"
                android:fontFamily="@font/el_messiri_bold"
                app:layout_constraintBottom_toBottomOf="@+id/ttxtTo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ttxtTo" />

            <TextView
                android:id="@+id/ttxtTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/lux_montag"
                android:text=""
                android:textAlignment="textStart"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.671"
                app:layout_constraintStart_toStartOf="@+id/cPickupDate"
                app:layout_constraintTop_toBottomOf="@+id/ttxtFrom" />

            <TextView
                android:id="@+id/txtPickupTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/pick_up_date"
                android:textStyle="bold"
                android:textSize="20dp"
                android:fontFamily="@font/el_messiri_bold"
                app:layout_constraintBottom_toBottomOf="@+id/cPickupDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cPickupDate" />

            <TextView
                android:id="@+id/cPickupDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/lux_montag"
                android:text=""
                android:textAlignment="textStart"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.09"
                app:layout_constraintStart_toStartOf="@+id/cPickUpTime"
                app:layout_constraintTop_toBottomOf="@+id/ttxtTo" />

            <TextView
                android:id="@+id/txtPickTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/pick_up_time"
                android:textStyle="bold"
                android:textSize="20sp"
                android:fontFamily="@font/el_messiri_bold"
                app:layout_constraintBottom_toBottomOf="@+id/cPickUpTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cPickUpTime" />

            <TextView
                android:id="@+id/cPickUpTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/lux_montag"
                android:text=""
                android:textAlignment="textStart"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/txtPickTime"
                app:layout_constraintTop_toBottomOf="@+id/cPickupDate" />

            <TextView
                android:id="@+id/txtDistanceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/distance"
                android:textStyle="bold"
                android:textSize="20dp"
                android:fontFamily="@font/el_messiri_bold"
                app:layout_constraintBottom_toBottomOf="@+id/cDistance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cDistance"
                app:layout_constraintVertical_bias="0.35" />

            <TextView
                android:id="@+id/cDistance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/lux_montag"
                android:text=""
                android:textAlignment="textStart"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/cPickUpTime"
                app:layout_constraintTop_toBottomOf="@+id/cPickUpTime" />

            <TextView
                android:id="@+id/txtAmountTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/amount"
                android:textStyle="bold"
                android:textSize="20sp"
                android:fontFamily="@font/el_messiri_bold"
                app:layout_constraintBottom_toBottomOf="@+id/ctextAmount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ctextAmount" />

            <TextView
                android:id="@+id/ctextAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/lux_montag"
                android:text=""
                android:textAlignment="textStart"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/cDistance"
                app:layout_constraintTop_toBottomOf="@+id/cDistance"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>