<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"></include>

    <TextView
        android:id="@+id/texttitleHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:fontFamily="@font/el_messiri_bold"
        android:text="@string/cancelled_trip_details"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHead">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/infoConatainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent">

                    <TextView
                        android:id="@+id/utxtNameTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/el_messiri_bold"
                        android:text="@string/client"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/uTextName"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/uTextName" />

                    <TextView
                        android:id="@+id/uTextName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/livingston_sanserif"
                        android:text="Nabase"
                        android:textAlignment="center"
                        android:textSize="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.463"
                        app:layout_constraintStart_toEndOf="@+id/utxtNameTitle"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/utxtFromTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/el_messiri_bold"
                        android:text="@string/fromtxt"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/utxtFrom"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/utxtFrom"
                        app:layout_constraintVertical_bias="0.285" />

                    <TextView
                        android:id="@+id/utxtFrom"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/livingston_sanserif"
                        android:text="Tanoso"
                        android:textAlignment="center"
                        android:textSize="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.479"
                        app:layout_constraintStart_toEndOf="@+id/utxtFromTitle"
                        app:layout_constraintTop_toBottomOf="@+id/uTextName" />

                    <TextView
                        android:id="@+id/utxtToTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/el_messiri_bold"
                        android:text="@string/to"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/utxtTo"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/utxtTo" />

                    <TextView
                        android:id="@+id/utxtTo"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/livingston_sanserif"
                        android:text="Sofoline"
                        android:textAlignment="center"
                        android:textSize="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.671"
                        app:layout_constraintStart_toEndOf="@+id/utxtToTitle"
                        app:layout_constraintTop_toBottomOf="@+id/utxtFrom" />

                    <TextView
                        android:id="@+id/txtPickupTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/el_messiri_bold"
                        android:text="@string/pick_up_date"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/uPickupDate"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/uPickupDate" />

                    <TextView
                        android:id="@+id/uPickupDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/livingston_sanserif"
                        android:text="16/12/2019"
                        android:textAlignment="center"
                        android:textSize="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.365"
                        app:layout_constraintStart_toEndOf="@+id/txtPickupTitle"
                        app:layout_constraintTop_toBottomOf="@+id/utxtTo" />

                    <TextView
                        android:id="@+id/txtPickTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/el_messiri_bold"
                        android:text="@string/pick_up_time"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/uPickUpTime"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/uPickUpTime" />

                    <TextView
                        android:id="@+id/uPickUpTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/livingston_sanserif"
                        android:text="1:30"
                        android:textAlignment="center"
                        android:textSize="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.381"
                        app:layout_constraintStart_toEndOf="@+id/txtPickTime"
                        app:layout_constraintTop_toBottomOf="@+id/uPickupDate" />



                    <TextView
                        android:id="@+id/utextAmountT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/el_messiri_bold"
                        android:text="@string/amount"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/utextAmount"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/utextAmount" />

                    <TextView
                        android:id="@+id/utextAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/livingston_sanserif"
                        android:text="Ghc 10"
                        android:textAlignment="center"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.381"
                        app:layout_constraintStart_toEndOf="@+id/txtPickTime"
                        app:layout_constraintTop_toBottomOf="@+id/uPickUpTime" />


                    <TextView
                        android:id="@+id/txtDriverInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="36dp"
                        android:text="Driver Info"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/utextAmount"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/txtNameTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/el_messiri_bold"
                        android:text="@string/driver_name"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/dTextNum"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/dTextNum"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/dTextNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/livingston_sanserif"
                        android:text="Nabase"
                        android:textAlignment="center"
                        android:textSize="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.463"
                        app:layout_constraintStart_toEndOf="@+id/txtNameTitle"
                        app:layout_constraintTop_toBottomOf="@id/txtDriverInfo"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/txtPhonetitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/el_messiri_bold"
                        android:text="@string/driver_contact"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/dContact"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/dContact"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/dContact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/livingston_sanserif"
                        android:text="0553181665"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlue"
                        android:textSize="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.474"
                        app:layout_constraintStart_toEndOf="@+id/txtPhonetitle"
                        app:layout_constraintTop_toBottomOf="@+id/dTextNum"
                        android:visibility="gone"/>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </ScrollView>






</androidx.constraintlayout.widget.ConstraintLayout>